<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bmit"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bmi_calculator"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="50dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weight"
        android:id="@+id/textView2"
        android:layout_marginTop="20dp"
        android:textColor="#f90c0c"
        android:layout_below="@+id/textView"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:textColor="#fa1818"
        android:hint="@string/kg"
        android:textSize="25dp"
        android:inputType="numberDecimal|numberSigned"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/height"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:textColor="#e10606"
        android:layout_below="@+id/editText"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView3"
        android:textColor="#f50c0c"
        android:hint="@string/cm"
        android:textSize="25dp"
        android:inputType="numberDecimal|numberSigned"/>



    <RadioGroup
        android:id="@+id/radiosex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:checked="true"
            android:text="@string/radio_male"
            android:textSize="25dp"
            android:textColor="#f90c0c" />
        <RadioButton
            android:id="@+id/radiofemale"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/radio_female"
            android:checked="false"
            android:textColor="#f90c0c" />


    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/radiosex"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="20dp"
        android:id="@+id/button2"
        android:layout_below="@+id/radiosex"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/editText3"
        android:layout_below="@+id/button"
        />
    </RelativeLayout>
</RelativeLayout>