<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bmr_calculator"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/weightb"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"
        android:textColor="#f90c0c"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:textColor="#fa1818"
        android:hint="kg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/heightb"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:textColor="#e10606"
        android:layout_below="@+id/editText"
        android:layout_alignEnd="@+id/textView2"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/editText"
        android:textColor="#f50c0c"
        android:hint="cm"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ageb"
        android:id="@+id/textView4"
        android:layout_marginTop="10dp"
        android:textColor="#e10606"
        android:layout_below="@+id/editText2"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:textColor="#fa1818"
        android:hint="age"/>



    <RadioGroup
        android:id="@+id/radiosex"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText4"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/radiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:checked="true"
            android:text="@string/radiob_male"
            android:layout_marginTop="10dp"
            android:textSize="25dp"/>
        <RadioButton
            android:id="@+id/radiofemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/radiob_female"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:checked="false" />


    </RadioGroup>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="258dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:entries="@array/country_arrays"
        android:prompt="@string/country_prompt"
        android:layout_below="@+id/radiosex"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okb"
        android:id="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/spinner1"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetb"
        android:layout_marginTop="10dp"
        android:id="@+id/buttonb"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
